--- a/pilot/docker/Dockerfile.proxy_debug
+++ b/pilot/docker/Dockerfile.proxy_debug
@@ -2,8 +2,8 @@ FROM istionightly/base_debug
 ARG proxy_version
 ARG istio_version
 
-# Install Envoy.
-ADD envoy /usr/local/bin/envoy
+# Install Mosn.
+ADD mosn /usr/local/bin/mosn
 
 # Environment variables indicating this proxy's version/capabilities as opaque string
 ENV ISTIO_META_ISTIO_PROXY_VERSION "1.1.3"
@@ -14,15 +14,15 @@ ENV ISTIO_META_ISTIO_VERSION $istio_version
 
 ADD pilot-agent /usr/local/bin/pilot-agent
 
-# pilot-agent and envoy may run with effective uid 0 in order to run envoy with
+# pilot-agent and mosn may run with effective uid 0 in order to run mosn with
 # CAP_NET_ADMIN, so any iptables rule matching on "-m owner --uid-owner
 # istio-proxy" will not match connections from those processes anymore.
 # Instead, rely on the process's effective gid being istio-proxy and create a
 # "-m owner --gid-owner istio-proxy" iptables rule in istio-iptables.sh.
 # TODO: disabling due to https://github.com/istio/istio/issues/5745
 # RUN \
-# chgrp 1337 /usr/local/bin/envoy /usr/local/bin/pilot-agent && \
-# chmod 2755 /usr/local/bin/envoy /usr/local/bin/pilot-agent
+# chgrp 1337 /usr/local/bin/mosn /usr/local/bin/pilot-agent && \
+# chmod 2755 /usr/local/bin/mosn /usr/local/bin/pilot-agent
 
 ADD envoy_pilot.yaml.tmpl /etc/istio/proxy/envoy_pilot.yaml.tmpl
 ADD envoy_policy.yaml.tmpl /etc/istio/proxy/envoy_policy.yaml.tmpl
@@ -42,5 +42,5 @@ RUN useradd -m --uid 1337 istio-proxy && \
     echo "istio-proxy ALL=NOPASSWD: ALL" >> /etc/sudoers && \
     chown -R istio-proxy /var/lib/istio
 
-# The pilot-agent will bootstrap Envoy.
+# The pilot-agent will bootstrap Mosn.
 ENTRYPOINT ["/usr/local/bin/pilot-agent"]
