--- a/pilot/docker/Dockerfile.proxyv2
+++ b/pilot/docker/Dockerfile.proxyv2
@@ -2,8 +2,8 @@ FROM istionightly/base_debug
 ARG proxy_version
 ARG istio_version
 
-# Install Envoy.
-ADD envoy /usr/local/bin/envoy
+# Install Mosn.
+ADD mosn /usr/local/bin/mosn
 
 # Environment variables indicating this proxy's version/capabilities as opaque string
 ENV ISTIO_META_ISTIO_PROXY_VERSION "1.1.3"
@@ -28,12 +28,12 @@ COPY gcp_envoy_bootstrap.json /var/lib/istio/envoy/gcp_envoy_bootstrap_tmpl.json
 # obtained from debian ca-certs deb using fetch_cacerts.sh
 ADD ca-certificates.tgz /
 
-RUN chmod 755 /usr/local/bin/envoy /usr/local/bin/pilot-agent
+RUN chmod 755 /usr/local/bin/mosn /usr/local/bin/pilot-agent
 
 # Sudoers used to allow tcpdump and other debug utilities.
 RUN useradd -m --uid 1337 istio-proxy && \
     echo "istio-proxy ALL=NOPASSWD: ALL" >> /etc/sudoers && \
     chown -R istio-proxy /var/lib/istio
 
-# The pilot-agent will bootstrap Envoy.
+# The pilot-agent will bootstrap Mosn.
 ENTRYPOINT ["/usr/local/bin/pilot-agent"]
